--- a/indexStyles.css
+++ b/indexStyles.css
@@ -1,14 +1,43 @@
 header{
     position: fixed;
+    width: 100%;
+    height: 15%;
     background-color: rgba(247, 250, 253, 1);
+    
+   
 
 }
-.sync p{
-    font-family: open sans, sans serif;
+.content-nav{
+    display: flex;
+    column-gap: 20px;
+    margin-left: 40px;
+    align-items: center;
+    margin-top: 30px;
+
 }
+.content-nav img{
+    width: auto;
+    height: auto;
+    margin-left: 60px;
+
+}
+/*.content-nav p{
+    font-family: open sans, sans serif;
+    
+}*/
 nav {
+
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-right: 80px;
 
+}
+ul{
+    display: flex;
+    list-style: none;
+    column-gap: 40px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    font-weight: bold;
 }
