--- a/navbarStyle.css
+++ b/navbarStyle.css
@@ -1,6 +1,11 @@
+
+.{
+    font-family: 'Open Sans', sans-serif;
+}
+
 body {
     margin: 0;
-    font-family: 'Arial', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .navbar {
@@ -43,7 +48,7 @@ body {
 }
 
 #bar-color a:hover {
-    color: red;
+    color: #ff556e;
 }
 
 .dropdown {
@@ -75,19 +80,19 @@ body {
 }
 .button-down{
     background-color:  rgba(247, 250, 253, 1);
-    color: red;
+    color: #ff556e;
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
     font-weight: bold;
     border-radius: 25px;
     padding: 10px 25px 10px 25px;
-    border-color: red;
+    border-color: #ff556e;
     
 
 }
 .button-down:hover{
     color: white;
-    background-color: red;
+    background-color: #ff556e;
 
     
 
