--- a/index.css
+++ b/index.css
@@ -4,35 +4,44 @@ font-family: 'Open Sans', sans-serif;
 }
 
 main{
+
 background-image: url("./assets/Desktop\ -\ 2.png");
 width: 100%;
-height:619px;
+height:600px;
+margin-top: 0;
 
 
 }
 
 .text{
-    text-align: center;
-background-color: aquamarine;
-margin:15px 100px 15px 100px ;
+text-align:center ;
+
+margin: 0px 100px 0 100px ;
+
 
 
 }
+
 h1{
     font-size: 64px;
+    margin-bottom: 30px;
 }
+
 p{
     font-size: 18px;
     text-align: center;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-left: 250px;
+    margin-right: 250px;
+    word-spacing:5px;
 }
 
 .downloads{
 
     background-color: bisque;
-    margin-top: 50px;
+    margin-top: 30px;
     text-align: center;
+    
+
 }
 .button-apple{
     background-color: #ff556e;
@@ -45,17 +54,16 @@ p{
     border-color: #ff556e;
     border: none;
     display: inline-block;
+    
 
 }
-.button-apple img{
-    height: 25px;
-    width: 20px;
-    margin-right: 10px ;
+.button-apple:hover{
+    background-color:#c09efd;
 }
 
 
 .button-android{
-   background-color: #ff556e; 
+    background-color: #ff556e; 
     color: rgba(247, 250, 253, 1);
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
@@ -64,5 +72,21 @@ p{
     padding: 10px 25px 10px 25px;
     border-color: #ff556e;
     border:none;
+    margin-left: 15px;
     
+}
+.button-android:hover{
+    background-color:#c09efd;
+}
+
+
+.index-phone{
+width: 700px;
+display: block;
+margin-left: auto;
+margin-right: auto;
+padding-top: 50px;
+padding-bottom: 50px;
+
+
 }
