--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ font-family: 'Open Sans', sans-serif;
 
 main{
 
-background-image: url("./assets/Desktop\ -\ 2.png");
+background-image: url("./assets/Desktop - 1.png");
 width: 100%;
 height:600px;
 margin-top: 0;
@@ -37,7 +37,6 @@ p{
 
 .downloads{
 
-    background-color: bisque;
     margin-top: 30px;
     text-align: center;
     
@@ -90,3 +89,41 @@ padding-bottom: 50px;
 
 
 }
+
+
+.icons{
+    background-color: #ff556e;
+    height: 600px;
+    width: 100%;
+    display: flex;
+     justify-content: center;
+
+}
+.circle {
+    display: flex;
+    align-items:center;
+    /*Margen entre items*/ margin: 10px 10px 10px 10px;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
+}
+
+.circle i {
+    font-size: 40px; 
+  }
+
+
+
+  .card_icon {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 20%;
+    font-size: 10px;
+    color: #333333;
+  }
