--- a/index.css
+++ b/index.css
@@ -15,7 +15,6 @@ margin-top: 0;
 
 .text{
 text-align:center ;
-
 margin: 0px 100px 0 100px ;
 
 
@@ -25,6 +24,7 @@ margin: 0px 100px 0 100px ;
 h1{
     font-size: 64px;
     margin-bottom: 30px;
+    padding-top: 150px;
 }
 
 p{
@@ -92,38 +92,68 @@ padding-bottom: 50px;
 
 
 .icons{
-    background-color: #ff556e;
+    background-color:;
     height: 600px;
     width: 100%;
     display: flex;
-     justify-content: center;
+    flex-direction: row;
+    justify-content: center;
 
 }
 .circle {
     display: flex;
     align-items:center;
-    /*Margen entre items*/ margin: 10px 10px 10px 10px;
+    /*Margen entre items*/ margin: 40px 40px 10px 40px;
     justify-content: center;
     width: 100px;
     height: 100px;
-    background-color: white;
+   
     border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
     
 }
 
 .circle i {
     font-size: 40px; 
-  }
+}
 
 
 
-  .card_icon {
+.card_icon {
     display: flex;
     flex-direction: column;
+    column-gap: 2px;
     align-items: center;
-    text-align: center;
     width: 20%;
     font-size: 10px;
     color: #333333;
-  }
+    margin-bottom: 1px;
+}
+
+.text-icon{
+    font-size:15px ;
+    text-align: center;
+    font-weight: bold;
+
+    
+}
+#purple{
+
+    background-color:  rgba(170, 126, 236, 0.14);
+}
+#green{
+    background-color: rgba(25, 202, 148, 0.18);
+}
+#red{
+    background-color: rgba(255, 85, 110, 0.19);
+}
+#orange{
+    background-color: rgba(255, 179, 15, 0.18);
+}
+
+#blue{
+
+    background-color:rgba(79, 185, 232, 0.18);
+}
+
