--- a/navbarStyle.css
+++ b/navbarStyle.css
@@ -18,6 +18,7 @@ body {
     height: 120px;
     width: 100%;
     position: fixed;
+    z-index: 100;
 
 
 }
@@ -34,7 +35,7 @@ body {
     font-size: 15px;
     font-weight: bold;
     align-items: center;
-    margin-right: 50px;
+    margin-right: 100px;
 }
 
 .navbar li {
