--- a/description.css
+++ b/description.css
@@ -61,6 +61,11 @@ margin-top: 100px;
     text-align: left;
     list-style: none;
 }
+
+#checkbox-list i{
+
+ margin-left:5px;
+}
 #schedule-button {
 padding: 8px 10px 8px 10px; 
 background-color:#c09efd;
