--- a/description.css
+++ b/description.css
@@ -13,7 +13,7 @@
 
 }
 #favorite-img{
-    margin-right: 20px;
+    margin-right: 30px;
 }
 #favorite-img img{
 /* background-color: antiquewhite; */
@@ -37,8 +37,8 @@ margin-bottom: 20px;
 
 
 .calendar-section{
-background-color:#e8eff6;    
-width: 100%;
+    background-color:#e8eff6;    
+    width: 100%;
     height: 700px;
     display: flex;
     justify-content:center;
@@ -46,15 +46,18 @@ width: 100%;
 }
 
 #organization{
-margin-top: 100px;
+    width: 100%;
+    margin-top: 100px;
+    margin-left: 250px;
+    
 }
 
 .privacy-text{
     margin-top: 20px;
     font-size: 18px;
-    margin-right: 20px;
+    margin-right: 1px;
     text-align: left;
-    width: 380px;
+    width: 511px;
     
 }
 #checkbox-list{
@@ -95,6 +98,21 @@ border: none;
 
 }
 
+#schedule-button:hover{
+    cursor: pointer;
+    filter: brightness(1.1);
+}
+#tracking-button:hover{
+    cursor: pointer;
+    filter: brightness(1.1);
+}
+#organize-button:hover{
+    cursor: pointer;
+    filter: brightness(1.1);
+
+}
+
+
 .red-button{
     background-color: #ff556e;
     width: 150px;
@@ -111,20 +129,26 @@ border: none;
 }
 .red-button:hover{
     background-color:#c09efd;
+    cursor: pointer;
+    filter: brightness(1.1);
 }
 
 
 .calendar{
     margin-top: 100px;
     width: 100%;
-    height: 500px;
+    height: 490px;
     display: flex;
     justify-content:center;
 
 }
 .calendar img{
-    margin-left: 20px;
+    margin-left: 4px;
+    margin-right: 290px;
 
+}
+.active{
+    font-weight: bold;
 }
 
 
