--- a/index.css
+++ b/index.css
@@ -2,17 +2,23 @@
 
 font-family: 'Open Sans', sans-serif;
 }
-body{
 
+ body{
+    position: relative;
+    min-height: 100vh;
+    padding-bottom: 3em;
     background-color:rgba(247, 250, 253, 1); 
-}
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 400px;
+} 
 
 main{
 
 /*background-image: url("./assets/Desktop - 1.png");*/
-width: 100%;
-height:600px;
-margin-top: 0;
+ width: 100%;
+/*height:600px;*/
+margin-top: 0; 
 
 
 
@@ -112,12 +118,12 @@ padding-top: 50px;
 padding-bottom: 50px;
 animation: mobile 3s ease 1s infinite;
 }
- @keyframes mobile {
+ /* @keyframes mobile {
     0%, 50%, 100% { transform: scale(1, 1); }
   30%, 80% { transform: scale(0.92, 0.95); }
 
     
- }
+ } */
 
 
 .icons{
@@ -162,7 +168,7 @@ animation: mobile 3s ease 1s infinite;
     font-size: 10px;
     color: #333333;
     margin-bottom: 1px;
-   
+
     
 }
 
@@ -174,8 +180,9 @@ animation: mobile 3s ease 1s infinite;
     font-weight: bold;
     margin-top: 10px;
 
-    
+   
 }
+
 #purple{
 
     background-color:  rgba(170, 126, 236, 0.14);
