--- a/footer.css
+++ b/footer.css
@@ -2,19 +2,20 @@
     margin: 0;
 }
 .footer{
+    
     display: flex;
     flex-direction: row;
-    background-color: aqua;
     justify-content:space-around ;
     font-size: 18px;
-    /* background-color: #e8eff6;    */
+    background-color: #e8eff6;    
     
 }
 
 .footer-list{
-
+margin-top: 25px;
  list-style:none;
  color:#999999; 
+
 }
 
 
