--- a/description.css
+++ b/description.css
@@ -152,5 +152,13 @@ border: none;
     font-weight: bold;
 }
 
+.footer-line{
+    background-color: rgba(247, 250, 253, 1); 
+color:  #777777;
+font-weight: bold;
+border: none;
+    width: 100%;
+    height: 2px;
 
+}
 
