--- a/footer.css
+++ b/footer.css
@@ -1,22 +1,39 @@
 * {
     margin: 0;
 }
+footer{
+    background-color: #e8eff6;  
+    height:240px;
+}
 .footer{
     
     display: flex;
     flex-direction: row;
-    justify-content:space-around ;
+    justify-content:space-evenly;
     font-size: 18px;
-    background-color: #e8eff6;    
+    
+     
+     
     
 }
 
 .footer-list{
-margin-top: 25px;
+    word-spacing: 5px;
+    line-height: 35px;
+margin-top: 35px;
  list-style:none;
  color:#999999; 
 
 }
+
+.copiright{
+    text-align: center;
+    margin-top: 60px;
+    color:#999999; 
+    margin-bottom: 40px;
+
+}
+
 
 
 
