--- a/navbarStyle.css
+++ b/navbarStyle.css
@@ -110,3 +110,46 @@ body {
     
 
 }
+
+
+   @media (max-width: 768px) {
+    .header {
+        flex-direction: column;
+        padding: 5px 5%;
+    }
+
+    .header .content-nav {
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .header .content-nav li {
+        padding: 10px 0;
+    }
+}
+
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    .header {
+        padding: 5px 7%;
+    }
+    .header .content-nav {
+        justify-content: space-around;
+    }
+    .header .content-nav li {
+        padding: 0 10px;
+    }
+}
+
+
+@media (min-width: 1025px) {
+    .header {
+        padding: 5px 10%;
+    }
+    .header .content-nav {
+        justify-content: flex-end;
+    }
+    .header .content-nav li {
+        padding: 0 20px;
+    }
+}
