--- a/index.css
+++ b/index.css
@@ -118,6 +118,12 @@ padding-bottom: 50px;
 animation: mobile 3s ease 1s infinite;
 }
 
+@keyframes mobile {
+    0%, 50%, 100% { transform: scale(1, 1); }
+    30%, 80% { transform: scale(0.92, 0.95); }
+
+}
+
 .icons{
     background-color:;
     height: 250px;
@@ -201,8 +207,8 @@ animation: mobile 3s ease 1s infinite;
 
 #blue:hover{
     transform: scale(1.1);
-     filter: brightness(1.3);
-     cursor: pointer;
+    filter: brightness(1.3);
+    cursor: pointer;
 }
 
 #red:hover{
